# setuptools_test

./: .gitignore  README.md  pyproject.toml  setup.py
rs_example_lib/: frf.pyx  rss.pyx  time_frf.py  time_rss.py  time_trapz.py  trapz.hpp  trapz.pyx
